--- a/Level-1/Task2/index.html
+++ b/Level-1/Task2/index.html
@@ -323,7 +323,7 @@
             <a href="https://www.linkedin.com/in/esraa-mohamed-b49463206/"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/esraa155"><i class="fa-brands fa-github"></i></a>
           </div>
-          <a href="C:\Users\MBR\Downloads\portfolio Esraa\img\Esraa_Resume-New.pdf" download class="btn btn 2"
+          <a href=".\img\Esraa_Resume-New.pdf" download class="btn btn 2"
             >Download CV</a
           >
         </div>
